--- a/index.html
+++ b/index.html
@@ -13,8 +13,34 @@
 	    <p class="lead">La solución definitiva para aprender geometría.</p>
 	  </div>
 	</div>
-	
-    <script type="text/javascript" src="/js/index.js"></script>
+
+  <div class="row">
+    <div class="col-md-3">
+      Cuadrado
+      <input id="cua_lado" type="number" class="form-control" placeholder="Lado">
+       <button type="button" class="btn btn-outline-dark">Calcular</button>
+    </div>
+    <div class="col-md-3">
+      Rectángulo
+      <input id="rec_base" type="number" class="form-control" placeholder="Base">
+      <input id="rec_altura" type="number" class="form-control" placeholder="Altura">
+      <button type="button" class="btn btn-outline-dark">Calcular</button>
+    </div>
+    <div class="col-md-3">
+      Triángulo
+      <input id="tri_cateto1" type="number" class="form-control" placeholder="Cateto1">
+      <input id="tri_cateto2" type="number" class="form-control" placeholder="Cateto2">
+      <input id="tri_hipotenusa" type="number" class="form-control" placeholder="Hipotenusa">
+      <button type="button" class="btn btn-outline-dark">Calcular</button>
+    </div>
+    <div class="col-md-3">
+      Círculo
+      <input id="cir_radio" type="number" class="form-control" placeholder="Radio">
+      <button type="button" class="btn btn-outline-dark">Calcular</button>
+    </div>
+  </div>
+
+  <script type="text/javascript" src="/js/index.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
