--- a/index.html
+++ b/index.html
@@ -13,30 +13,29 @@
 	    <p class="lead">La solución definitiva para aprender geometría.</p>
 	  </div>
 	</div>
-
   <div class="row">
     <div class="col-md-3">
       Cuadrado
-      <input id="cua_lado" type="number" class="form-control" placeholder="Lado">
-       <button type="button" class="btn btn-outline-dark">Calcular</button>
+      <input id="cua_lado" type="number" min= 0 max = 1000 class="form-control" placeholder="Lado">
+       <button id="but_cua" type="button" class="btn btn-outline-dark">Calcular</button>
     </div>
     <div class="col-md-3">
       Rectángulo
-      <input id="rec_base" type="number" class="form-control" placeholder="Base">
-      <input id="rec_altura" type="number" class="form-control" placeholder="Altura">
-      <button type="button" class="btn btn-outline-dark">Calcular</button>
+      <input id="rec_base" type="number" min= 0 max = 1000 class="form-control" placeholder="Base">
+      <input id="rec_altura" type="number" min= 0 max = 1000 class="form-control" placeholder="Altura">
+      <button id="but_rec" type="button" class="btn btn-outline-dark">Calcular</button>
     </div>
     <div class="col-md-3">
       Triángulo
-      <input id="tri_cateto1" type="number" class="form-control" placeholder="Cateto1">
-      <input id="tri_cateto2" type="number" class="form-control" placeholder="Cateto2">
-      <input id="tri_hipotenusa" type="number" class="form-control" placeholder="Hipotenusa">
-      <button type="button" class="btn btn-outline-dark">Calcular</button>
+      <input id="tri_cateto1" type="number" min= 0 max = 1000 class="form-control" placeholder="Cateto1">
+      <input id="tri_cateto2" type="number" min= 0 max = 1000 class="form-control" placeholder="Cateto2">
+      <input id="tri_hipotenusa" type="number" min= 0 max = 1000 class="form-control" placeholder="Hipotenusa">
+      <button id="but_tri" type="button" class="btn btn-outline-dark">Calcular</button>
     </div>
     <div class="col-md-3">
       Círculo
-      <input id="cir_radio" type="number" class="form-control" placeholder="Radio">
-      <button type="button" class="btn btn-outline-dark">Calcular</button>
+      <input id="cir_radio" type="number" min= 0 max = 1000 class="form-control" placeholder="Radio">
+      <button id="but_cir" type="button" class="btn btn-outline-dark">Calcular</button>
     </div>
   </div>
 
